# cabal2pkg

./: .gitignore  .hlint.yaml  CHANGELOG.md  Makefile  NEWS.md  README.md  TODO  cabal.project  cabal2pkg.cabal
doc/: cabal2pkg.8
lib/Cabal2Pkg/: CmdLine.hs  Extractor.hs  Pretty.hs  Site.hs
lib/Cabal2Pkg/Command/: Common.hs  Init.hs  Update.hs
lib/Cabal2Pkg/Extractor/: Component.hs  Conditional.hs  Dependency.hs  Haddock.hs
lib/Cabal2Pkg/Extractor/Dependency/: Executable.hs  Library.hs
lib/Cabal2Pkg/Generator/: Buildlink3.hs  CommitMsg.hs  Description.hs  Makefile.hs
lib/Cabal2Pkg/Site/: GitLab.hs
lib/Control/Concurrent/: Deferred.hs
lib/Data/Text/Lazy/: Merge.hs
lib/Database/Pkgsrc/: SrcDb.hs
lib/Language/BMake/: AST.hs
lib/Language/BMake/AST/: ExactPrint.hs  Extension.hs  Parse.hs  Plain.hs  Pretty.hs  Types.hs
lib/System/File/PosixPath/: Alt.hs
lib/System/OsString/Posix/: Instances.hs
src/: Main.hs
src/Cabal2Pkg/: Cabal.hs  CmdLine.hs  Extractor.hs  Generator.hs  Hackage.hs  PackageURI.hs  Pretty.hs  RawMeta.hs  Site.hs  Static.hs  Utils.hs
src/Cabal2Pkg/Command/: Common.hs  Init.hs  Update.hs
src/Cabal2Pkg/Extractor/: Component.hs  Conditional.hs  Dependency.hs  ExeDependency.hs  License.hs
src/Cabal2Pkg/Extractor/Dependency/: Executable.hs  ExternalLib.hs  Library.hs  PkgConfig.hs  Version.hs
src/Cabal2Pkg/Generator/: Buildlink3.hs  CommitMsg.hs  Description.hs  Makefile.hs
src/Cabal2Pkg/Site/: Common.hs  GitHub.hs  GitLab.hs  Hackage.hs
src/Control/Concurrent/: Deferred.hs
src/Data/Text/Lazy/: Merge.hs
src/Data/Text/Short/: Orphans.hs
src/Database/Pkgsrc/: SrcDb.hs
src/GHC/Paths/: OsPath.hs  PosixPath.hs
src/Language/BMake/: AST.hs
src/Language/BMake/AST/: ExactPrint.hs  Extension.hs  Parser.hs  Plain.hs  Pretty.hs  Types.hs
src/System/Directory/: PosixPath.hs
src/System/File/OsPath/: Alt.hs
src/System/File/PosixPath/: Alt.hs
src/System/OsPath/: IsString.hs
src/System/OsString/Posix/: Instances.hs
templates/: Makefile.ede  Makefile.mustache
tests/: test.hs
tests/Test/Cabal2Pkg/Generator/: Description.hs
tests/Test/Language/BMake/AST/: Parse.hs  Pretty.hs
tests/data/: example-00.mk  example-01.mk  example-02.mk  example-03.mk
