cabal-version:      3.4
name:               cabal2pkg
version:            0.1.0.0
synopsis:           Tool to automate importing Cabal packages to pkgsrc
-- description:
homepage:           https://github.com/depressed-pho/cabal2pkg
license:            CC0-1.0
license-file:       LICENSE
author:             PHO
maintainer:         pho@cielonegro.org
-- copyright:
category:           Distribution
build-type:         Simple
extra-doc-files:    CHANGELOG.md

flag rtsopts
    description: Build the executable with RTS options enabled.
    manual: True
    default: True

flag threaded
    description: Build the executable with the threaded RTS.
    manual: True
    default: True

common warnings
    ghc-options: -Wall -Wextra -Wunused-packages

executable cabal2pkg
    import:           warnings
    main-is:          Main.hs

    other-modules:
        Cabal2Pkg.Cabal
        Cabal2Pkg.CmdLine
        Cabal2Pkg.Command.Init
        Cabal2Pkg.Extractor
        Cabal2Pkg.Extractor.Component
        Cabal2Pkg.Extractor.Conditional
        Cabal2Pkg.Extractor.Dependency
        Cabal2Pkg.Extractor.Dependency.Executable
        Cabal2Pkg.Extractor.Dependency.ExternalLib
        Cabal2Pkg.Extractor.Dependency.Library
        Cabal2Pkg.Extractor.Dependency.PkgConfig
        Cabal2Pkg.Extractor.License
        Cabal2Pkg.Generator.Makefile
        Cabal2Pkg.Static
        Cabal2Pkg.Utils
        Control.Concurrent.Deferred
        Database.Pkgsrc.SrcDb
        Language.BMake.AST

    build-depends:
        Cabal                ^>= 3.10.2
      , Cabal-syntax         ^>= 3.10.2
      , base                  == 4.*
      , bytestring           ^>= 0.12.1
      , case-insensitive     ^>= 1.2.1
      , conduit              ^>= 1.3.5
      , conduit-extra        ^>= 1.3.6
      , containers           ^>= 0.6.8
      , directory            ^>= 1.3.8
      , exceptions           ^>= 0.10.7
      , filepath              >= 1.4
      , ghc-paths            ^>= 0.1
      , microlens            ^>= 0.4.13
      , microlens-th         ^>= 0.4.3
      , optparse-applicative ^>= 0.18.1
      , pretty-show          ^>= 1.10
      , primitive            ^>= 0.9
      , resourcet            ^>= 1.3.0
      , safe-exceptions      ^>= 0.1.7
      , stm                  ^>= 2.5.2
      , tar-conduit          ^>= 0.4.1
      , template-haskell      >= 2.21
      , text                 ^>= 2.1.1
      , transformers         ^>= 0.6.1
      , typed-process        ^>= 0.2.11
      , unliftio             ^>= 0.2.25
      , unliftio-core        ^>= 0.2.1
      , unordered-containers ^>= 0.2.20

    if flag(rtsopts)
        ghc-options: -rtsopts

    if flag(threaded)
        ghc-options: -threaded

    hs-source-dirs:   src
    default-language: GHC2021
