cabal-version:      3.4
name:               cabal2pkg
version:            0.1.0.0
synopsis:           A tool to automate importing Cabal packages to pkgsrc
description:
    FIXME - description forthcoming
homepage:           https://github.com/depressed-pho/cabal2pkg
bug-reports:        https://github.com/depressed-pho/cabal2pkg/issues
license:            Unlicense
license-file:       UNLICENSE
author:             PHO
maintainer:         pho@cielonegro.org
category:           Distribution
build-type:         Simple
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type: git
    location: https://github.com/depressed-pho/cabal2pkg

flag rtsopts
    description: Build the executable with RTS options enabled.
    manual: True
    default: True

flag threaded
    description: Build the executable with the threaded RTS.
    manual: True
    default: True

common warnings
    ghc-options: -Wall -Wextra -Wunused-packages

executable cabal2pkg
    import:           warnings
    main-is:          Main.hs

    autogen-modules:
        PackageInfo_cabal2pkg

    other-modules:
        Cabal2Pkg.CmdLine
        Cabal2Pkg.Command.Common
        Cabal2Pkg.Command.Init
        Cabal2Pkg.Command.Update
        Cabal2Pkg.Extractor
        Cabal2Pkg.Extractor.Component
        Cabal2Pkg.Extractor.Conditional
        Cabal2Pkg.Extractor.Dependency
        Cabal2Pkg.Extractor.Dependency.Executable
        Cabal2Pkg.Extractor.Dependency.ExternalLib
        Cabal2Pkg.Extractor.Dependency.Library
        Cabal2Pkg.Extractor.Dependency.PkgConfig
        Cabal2Pkg.Extractor.License
        Cabal2Pkg.Generator.Buildlink3
        Cabal2Pkg.Generator.CommitMsg
        Cabal2Pkg.Generator.Description
        Cabal2Pkg.Generator.Makefile
        Cabal2Pkg.Pretty
        Cabal2Pkg.RawMeta
        Cabal2Pkg.Site
        Cabal2Pkg.Site.Common
        Cabal2Pkg.Site.GitHub
        Cabal2Pkg.Site.GitLab
        Cabal2Pkg.Site.Hackage
        Cabal2Pkg.Static
        Control.Concurrent.Deferred
        Data.Text.Lazy.Merge
        Database.Pkgsrc.SrcDb
        GHC.Paths.PosixPath
        Language.BMake.AST
        PackageInfo_cabal2pkg
        System.File.PosixPath.Alt
        System.Directory.PosixPath
        System.OsString.Posix.Instances

    build-depends:
        Cabal                ^>= 3.10.2
      , Cabal-syntax         ^>= 3.10.2
      , Diff                 ^>= 0.5
      , aeson                ^>= 2.2.1
      , ansi-terminal        ^>= 1.1.1
      , base                  == 4.*
      , bytestring           ^>= 0.12.1
      , case-insensitive     ^>= 1.2.1
      , conduit              ^>= 1.3.5
      , conduit-extra        ^>= 1.3.6
      , containers           ^>= 0.6.8
      , diff3                ^>= 0.3.1
      , directory            ^>= 1.3.8
      , either               ^>= 5.0.2
      , exceptions           ^>= 0.10.7
      , extra                ^>= 1.7.14
      , filepath              >= 1.4.200 && < 2
      , ghc-paths            ^>= 0.1
      , haddock-library      ^>= 1.11.0
      , http-conduit         ^>= 2.3.8
      , http-media           ^>= 0.8.1
      , http-types           ^>= 0.12.4
      , microlens            ^>= 0.4.13
      , microlens-th         ^>= 0.4.3
      , mono-traversable     ^>= 1.0
      , network-uri          ^>= 2.6.4
      , optparse-applicative ^>= 0.18.1
      , prettyprinter        ^>= 1.7.1
      , prettyprinter-ansi-terminal ^>= 1.1.3
      , pretty-show          ^>= 1.10
      , primitive            ^>= 0.9
      , resourcet            ^>= 1.3.0
      , safe-exceptions      ^>= 0.1.7
      , stm                  ^>= 2.5.2
      , syb                  ^>= 0.7.2
      , tar-conduit          ^>= 0.4.1
      , template-haskell      >= 2.21 && < 3
      , text                 ^>= 2.1.1
      , transformers         ^>= 0.6.1
      , typed-process        ^>= 0.2.11
      , unix                 ^>= 2.8.4
      , unliftio             ^>= 0.2.25
      , unliftio-core        ^>= 0.2.1
      , unordered-containers ^>= 0.2.20

    if flag(rtsopts)
        ghc-options: -rtsopts

    if flag(threaded)
        ghc-options: -threaded

    hs-source-dirs:   src
    default-language: GHC2021
