cabal-version:      3.12
name:               cabal2pkg
version:            0.1.2
synopsis:           A tool to automate importing/updating Haskell packages in pkgsrc
description:
    @cabal2pkg@ is a tool to automate importing Haskell packages to pkgsrc
    and updating existing Haskell packages in pkgsrc. @cabal2pkg@ is
    similar to @url2pkg(8)@, in that it downloads a distfile, extracts it,
    and generates package @Makefile@ and other files, but it is specialised
    in Haskell packages and is intended to generate mostly complete
    @Makefile@.

    @cabal2pkg@ can also update existing packages by performing 3-way merge
    on files. In the update mode, @cabal2pkg@ fetches two package metadata
    of the current and the updated version, then tries to apply differences
    between two versions against the current set of files.

homepage:           https://github.com/depressed-pho/cabal2pkg
bug-reports:        https://github.com/depressed-pho/cabal2pkg/issues
license:            Unlicense
license-file:       UNLICENSE
author:             PHO
maintainer:         pho@cielonegro.org
category:           Distribution
build-type:         Simple
extra-source-files:
    doc/cabal2pkg.8
    tests/data/**/*.mk
extra-doc-files:
    NEWS.md
    README.md

source-repository head
    type: git
    location: https://github.com/depressed-pho/cabal2pkg

flag rtsopts
    description: Build the executable with RTS options enabled.
    manual: True
    default: True

flag threaded
    description: Build the executable with the threaded RTS.
    manual: True
    default: True

common common-flags
    default-language: GHC2021
    ghc-options:
        -Wall
        -Wextra
        -Wunused-packages
        -- This is an undocumented warning. We have no idea what it means.
        -Wno-overlapping-patterns

common exec-flags
    import: common-flags

    if flag(rtsopts)
        ghc-options: -rtsopts

    if flag(threaded)
        ghc-options: -threaded

library
    import: common-flags
    hs-source-dirs: lib

    autogen-modules:
        PackageInfo_cabal2pkg

    exposed-modules:
        Cabal2Pkg.CmdLine
        Cabal2Pkg.Command.Common
        Cabal2Pkg.Command.Init
        Cabal2Pkg.Command.Update
        Cabal2Pkg.Extractor
        Cabal2Pkg.Extractor.Component
        Cabal2Pkg.Extractor.Conditional
        Cabal2Pkg.Extractor.Dependency
        Cabal2Pkg.Extractor.Dependency.Executable
        Cabal2Pkg.Extractor.Dependency.ExternalLib
        Cabal2Pkg.Extractor.Dependency.Library
        Cabal2Pkg.Extractor.Dependency.PkgConfig
        Cabal2Pkg.Extractor.Dependency.Version
        Cabal2Pkg.Extractor.License
        Cabal2Pkg.Generator.Buildlink3
        Cabal2Pkg.Generator.CommitMsg
        Cabal2Pkg.Generator.Description
        Cabal2Pkg.Generator.Makefile
        Cabal2Pkg.Pretty
        Cabal2Pkg.RawMeta
        Cabal2Pkg.Site
        Cabal2Pkg.Site.Common
        Cabal2Pkg.Site.GitHub
        Cabal2Pkg.Site.GitLab
        Cabal2Pkg.Site.Hackage
        Cabal2Pkg.Static
        Control.Concurrent.Deferred
        Data.Text.Lazy.Merge
        Database.Pkgsrc.SrcDb
        Language.BMake.AST
        Language.BMake.AST.ExactPrint
        Language.BMake.AST.Extension
        Language.BMake.AST.Parse
        Language.BMake.AST.Plain
        Language.BMake.AST.Pretty
        Language.BMake.AST.Types
        PackageInfo_cabal2pkg
        System.File.PosixPath.Alt
        System.Directory.PosixPath
        System.OsString.Posix.Instances

    build-depends:
        Cabal                ^>= 3.12
      , Cabal-syntax         ^>= 3.12
      , Diff                 ^>= 1.0.2
      , aeson                ^>= 2.2.3
      , ansi-terminal        ^>= 1.1.2
      , attoparsec           ^>= 0.14.4
      , base                  == 4.*
      , bytestring           ^>= 0.12.1
      , case-insensitive     ^>= 1.2.1
      , conduit              ^>= 1.3.6
      , conduit-extra        ^>= 1.3.7
      , containers           ^>= 0.7
      , diff3                ^>= 0.3.1
      , directory            ^>= 1.3.8
      , either               ^>= 5.0.2
      , exceptions           ^>= 0.10.7
      , extra                ^>= 1.8
      , filepath             ^>= 1.5.2
      , haddock-library      ^>= 1.11.0
      , http-conduit         ^>= 2.3.9
      , http-media           ^>= 0.8.1
      , http-types           ^>= 0.12.4
      , microlens-platform   ^>= 0.4.3
      , mono-traversable     ^>= 1.0.21
      , network-uri          ^>= 2.6.4
      , optparse-applicative ^>= 0.18.1
      , ordered-containers   ^>= 0.2.4
      , os-string            ^>= 2.0.2
      , prettyprinter        ^>= 1.7.1
      , prettyprinter-ansi-terminal ^>= 1.1.3
      , pretty-show          ^>= 1.10
      , primitive            ^>= 0.9
      , resourcet            ^>= 1.3.0
      , safe-exceptions      ^>= 0.1.7
      , stm                  ^>= 2.5.3
      , syb                  ^>= 0.7.2
      , tar-conduit          ^>= 0.4.1
      , template-haskell      >= 2.22 && < 3
      , text                 ^>= 2.1.1
      , transformers         ^>= 0.6.1
      , typed-process        ^>= 0.2.12
      , unix                 ^>= 2.8.5
      , unliftio             ^>= 0.2.25
      , unliftio-core        ^>= 0.2.1
      , unordered-containers ^>= 0.2.20

executable cabal2pkg
    import:  exec-flags
    main-is: src/Main.hs
    build-depends:
        base      == 4.*
      , cabal2pkg

test-suite cabal2pkg-tests
    import:         exec-flags
    ghc-options:    -F -pgmF=tasty-autocollect
    type:           exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is:        test.hs

    other-modules:
        Test.Language.BMake.AST.Parse
        Test.Language.BMake.AST.Pretty

    build-tool-depends:
        tasty-autocollect:tasty-autocollect ^>= 0.4.4

    build-depends:
        base               == 4.*
      , cabal2pkg
      , file-embed        ^>= 0.0.16
      , tasty             ^>= 1.5.3
      , tasty-autocollect ^>= 0.4.4
      , tasty-hunit       ^>= 0.10.2
      , text              ^>= 2.1.1
